--- a/markdown-link-lib/package.json
+++ b/markdown-link-lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "markdown-link-lib",
   "version": "1.0.4",
-  "description": "Esta biblioteca se destina a converter links de um arquivo md em um array de objetos contendo titulo e o link.",
+  "description": "Esta biblioteca destina-se a converter links de um arquivo md em um array de objetos contendo titulo e o link.",
   "main": "lib/markdown-link.js",
   "dependencies": {},
   "devDependencies": {
