--- a/card-validator-lib/package.json
+++ b/card-validator-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "card-validator-lib",
+  "name": "mt-card-validator",
   "version": "1.0.1",
   "description": "Esta biblioteca destina-se à validação de cartão de crédito, utilizando o algoritmo de [Luhn](https://en.wikipedia.org/wiki/Luhn_algorithm) para uso em aplicações desenvolvidas em JavaScript.",
   "main": "lib/index.js",
